[package]
name = "thunda"
version = "0.1.0"
edition = "2021"
authors = ["Tomiwa Adey <tomiwa@gumtech.co.uk>"]
description = "A Highly Scalable And Modular User Space TCP/IP stack written in Rust for Multicore systems."
repository = "https://github.com/tomiwaadey/thunda.git"
license = "MIT"
keywords = ["tcp", "ip", "networking", "rust", "user-space", "multicore", "xdp", "af_xdp", "dpdk", "ethernet", "udp", "ipv6", "ipv4", "arp", "icmp"]
categories = ["network-programming", "asynchronous-processing"]
readme = "README.md"
homepage = "https://github.com/tomiwaadey/thunda"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full", "fs"] }
actix = "0.13"
tokio-util = { version = "0.6", features = ["compat"] } # For working with AsyncRead/AsyncWrite utilities
log = "0.4"
bytes = "1.1"

[build-dependencies]
cc = "1.0"

[features]
default = ["std", "log"]
std = []
log = []
tap = []
af_xdp = []
defmt = []
